# rugsafe-solana

./: Cargo.toml  Makefile  README.md  solana-dev.code-workspace
.github/workflows/: development.yml  tg.yml
client/: main.js  package-lock.json
hello_world/: Cargo.toml  Makefile
hello_world/rugsafe/paper/: paper.aux  paper.tex  paper.toc
hello_world/rugsafe/paper/images/: py4.py  py6.py
hello_world/src/: instruction.rs  instructions.rs  lib.rs  processor.rs  state.rs
hello_world/src/instructions/: processor.rs
hello_world/src/instructions/perpetuals/: mod.rs  processor.rs
hello_world/src/instructions/vaults/: mod.rs  processor.rs  vaults.rs
hello_world/src/state/: perpetuals.rs
hello_world/test-ledger/: faucet-keypair.json
hello_world/tests/: main.rs  test.rs
hello_world/tests/test_suite/perpetuals/: mod.rs  test_perpetuals.rs
hello_world/tests/test_suite/vaults/: test_vaults.rs
rugsafe-perps/: Cargo.toml  Makefile
rugsafe-perps/src/: instructions.rs  lib.rs  state.rs
rugsafe-perps/src/instructions/: processor.rs
rugsafe-perps/src/instructions/perpetuals/: mod.rs  processor.rs
rugsafe-perps/src/state/: perpetuals.rs
rugsafe-perps/tests/test_suite/: mod.rs
rugsafe-perps/tests/test_suite/perpetuals/: mod.rs  test_perpetuals.rs
rugsafe-vaults/: Cargo.toml  Makefile
rugsafe-vaults/src/: instructions.rs
rugsafe-vaults/src/instructions/: processor.rs
rugsafe-vaults/src/instructions/vaults/: instruction.rs
rugsafe-vaults/src/state/: vaults.rs
rugsafe-vaults/tests/test_suite/vaults/: mod.rs  test_vaults.rs
rugsafe_original_old_merged/: Makefile
rugsafe_original_old_merged/rugsafe/paper/: paper.aux  paper.tex  paper.toc
rugsafe_original_old_merged/rugsafe/paper/images/: py1.py  py10.py  py11.py  py12.py  py2.py  py5.py  py7.py  py8.py  py9.py
rugsafe_original_old_merged/src/: state.rs
rugsafe_original_old_merged/src/instructions/perpetuals/: instruction.rs
rugsafe_original_old_merged/tests/test_suite/perpetuals/: test_perpetuals.rs
site2/: index.html
site2/src/: 1.fbx  script.js
tests/: integration.rs
ui/rugsafe/: LICENSE  README.md  package-lock.json  package.json
ui/rugsafe/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-1000-6xGRrEwPWpqg5eWaENtQp5S4jboPc4SAz1mF1vGeCBwF.tar.zst  snapshot-900-7qmgX3pZJQirEBePMNFVJ1H5svMupo6cgSA6cmranCsy.tar.zst  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
ui/rugsafe/test-ledger/accounts/run/: 0.1  100.0  1000.10  200.2  300.3  400.4  500.5  600.6  700.7  800.8
ui/rugsafe/test-ledger/accounts/snapshot/1000/: 900.9
ui/rugsafe/test-ledger/rocksdb/: 000056.sst  000057.sst  000058.sst  000059.sst  000060.sst  000061.sst  IDENTITY  LOG  LOG.old.1725908007762848  MANIFEST-000063
ui/rugsafe/test-ledger/snapshot/1000/: 1000  status_cache
ui/rugsafe/web/app/: global.css  layout.tsx
ui/rugsafe/web/app/perps/: page.tsx
ui/rugsafe/web/components/: ListVault.tsx  ListVaults.tsx  ListVaultsFromRegistry.tsx
ui/rugsafe/web/components/NewListVault/: index.tsx
ui/rugsafe/web/components/account/: account-detail-feature.tsx
ui/rugsafe/web/components/cluster/: cluster-data-access.tsx
ui/rugsafe/web/components/dashboard/: dashboard-feature.tsx
ui/rugsafe/web/components/dummylist/: index.tsx
ui/rugsafe/web/components/solana/: CreateVault.tsx  transaction-utils.tsx
ui/rugsafe/web/components/tradingView/: index.tsx
ui/rugsafe/web/components/ui/: ui-layout.tsx
